vances de cursos

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,5 +2,5 @@ $color-primary: #13111a
 $color-secondary: #efffff
 $border-color: #302c3f
 $text-color: #fff
-$gradient: linear-gradient(270deg, #7cffff, #072d91)
+$gradient: linear-gradient(270deg, rgb(124, 255, 255), rgb(7, 45, 145))
 $main-contrast: #2f8ca3
