--- a/src/app/store/StoreLayout.module.sass
+++ b/src/app/store/StoreLayout.module.sass
@@ -12,7 +12,7 @@
     column-gap: 1rem
     margin-bottom: 2rem
   &__chip
-    background: transparent
+    background: $border-color
     border-radius: 1rem
     border: 2px solid #7cffff
     padding: 0.5rem 1rem
