--- a/src/components/login/LoginForm/LoginForm.module.sass
+++ b/src/components/login/LoginForm/LoginForm.module.sass
@@ -33,3 +33,9 @@
       text-transform: uppercase
       cursor: pointer
       border-radius: 1.5rem
+
+// Estilos para pantallas pequeñas
+@media only screen and (max-width: 480px) 
+  .newAccountForm
+    margin: 2rem auto 0
+    max-width: 18rem
