--- a/src/app/store/StoreLayout.module.sass
+++ b/src/app/store/StoreLayout.module.sass
@@ -25,3 +25,21 @@
       color: white
       border-color: white
       box-shadow: 0 0 4rem rgba(255, 255, 255, 0.2)
+
+// Estilos para pantallas medianas
+@media only screen and (max-width: 768px) 
+  .storeLayout
+    padding: 0 3rem
+    &__list
+      column-gap: 1rem
+      row-gap: 1rem
+      margin-bottom: 1.5rem
+
+// Estilos para pantallas pequeñas
+@media only screen and (max-width: 480px) 
+  .storeLayout
+    padding: 0 2rem
+    &__list
+      column-gap: 0.5rem
+      row-gap: 0.5rem
+      margin-bottom: 1rem
