--- a/src/components/home/Description/Description.module.sass
+++ b/src/components/home/Description/Description.module.sass
@@ -31,3 +31,49 @@
       font-size: 1.5rem
       line-height: 1.75
       color: $text-color
+
+// Estilos para pantallas medianas
+@media only screen and (max-width: 768px) 
+  .description
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    max-width: 700px
+    padding: 2rem 2rem
+    &__button
+      margin: 3rem auto
+    &__text
+      width: 500px
+      & > h2
+        text-align: center
+        font-size: 1.5rem
+        font-weight: 500
+      & > p
+        font-size: 1rem
+        line-height: 1.5
+        color: $text-color
+
+//Estilos para pantallas chicas
+@media only screen and (max-width: 480px) 
+  .description
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    max-width: 400px
+    padding: 2rem 1.5rem
+    &__button
+      margin: 2rem auto
+    &__imageContainer
+      width: 350px
+      height: 200px
+    &__text
+      width: 350px
+      & > h2
+        text-align: center
+        font-size: 1.2rem
+        font-weight: 400
+      & > p
+        font-size: 0.8rem
+        line-height: 1.5rem
