--- a/src/components/home/Hero/Hero.module.sass
+++ b/src/components/home/Hero/Hero.module.sass
@@ -1,3 +1,4 @@
+
 .hero
   & > h1
     background-image: linear-gradient(270deg, #7cffff, #072d91)
@@ -13,3 +14,19 @@
     margin: 0 0 3rem 0
     text-align: center
     color: $color-secondary
+
+// Estilos para pantallas medianas
+@media only screen and (max-width: 768px) 
+  .hero
+    & > h1
+      font-size: 5rem
+    & > h2
+      font-size: 1.5rem
+
+//Estilos para pantallas chicas
+@media only screen and (max-width: 480px) 
+  .hero
+    & > h1
+      font-size: 3rem
+    & > h2
+      font-size: 1rem
