--- a/src/components/product/ProductView/ProductView.module.sass
+++ b/src/components/product/ProductView/ProductView.module.sass
@@ -38,3 +38,65 @@
       color: $color-secondary
       font-size: 2.125rem
       font-weight: 700
+
+// Estilos para pantallas medianas
+@media only screen and (max-width: 768px) 
+  .productView
+    max-width: 700px
+    display: flex
+    flex-wrap: wrap
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    &__images
+      justify-self: end
+      & > img
+        border-radius: 0.5rem
+    &__info
+      display: flex
+      flex-direction: column
+      width: 500px
+      &__category
+        width: fit-content
+        font-size: 1rem
+      &__title
+        font-size: 1.5rem
+        font-weight: 600
+      &__description
+        font-size: 1rem
+      &__price
+        font-size: 2rem
+        font-weight: 600
+
+// Estilos para pantallas pequeñas
+@media only screen and (max-width: 480px) 
+  .productView
+    max-width: 400px
+    display: flex
+    flex-wrap: wrap
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    grid-gap: 1rem
+    &__images
+      object-fit: scale-down
+      & > img
+        width: 300px
+        height: 300px
+    &__info
+      display: flex
+      justify-content: center
+      align-items: center
+      flex-direction: column
+      width: 350px
+      &__category
+        width: fit-content
+        font-size: 0.7rem
+      &__title
+        font-size: 1.1rem
+        font-weight: 600
+      &__description
+        font-size: 0.7rem
+      &__price
+        font-size: 1.2rem
+        font-weight: 600
